# CI-CD-ASM

./: .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: docker.yml  main.yml  sonarqube.yml
src/: main.py
tests/: test_main.py
